--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@
     border: 1px solid #ddd;
     border-radius: 4px 4px 0 0;
     border-radius: 0;
+    text-transform: uppercase;
+    font-size: 1.2em;
 }
 .nav-tabs.nav-justified>.active>a, 
 .nav-tabs.nav-justified>.active>a:focus, 
