--- a/style.css
+++ b/style.css
@@ -36,6 +36,22 @@
     background-color: #124680;
     padding:35px 15px 15px 15px;
 }
+.tabInnerContent{
+    position: relative;
+}
+.closeIt {
+    position: absolute;
+    right: 0;
+    background: #628cbb;
+    height: 25px;
+    width: 25px;
+    text-align: center;
+    line-height: 25px;
+    border-radius: 50%;
+    cursor: pointer;
+    user-select: none;
+    display: none;
+}
 .tripType{
   margin-bottom:30px;
   text-align: center;
@@ -78,11 +94,13 @@
 .flightForm .formDropDown select.form-control option{
   color:#124682;
 }
+.row.secondary{
+    display: none;
+}
 @media (min-width : 768px){
   .paddingRZero{
     padding-right:0;
   }
-
 
 }
 
